# GIST-CGLAB-CLASS-PAs

./: .gitignore  .gitmodules  README.md
pa1-jgs03177/: .gitignore  README.md  report.md
pa1-jgs03177/src/: main.cpp
pa2-jgs03177/: report.md
pa2-jgs03177/src/: main.cpp
pa3-jgs03177/: .gitignore  CMakeLists.txt  report.md
pa3-jgs03177/src/: CMakeLists.txt  main.cpp
pa4-jgs03177/: .gitignore  CMakeLists.txt  LICENSE  README.md  report.md
pa4-jgs03177/src/: CMakeLists.txt
pa4-jgs03177/src/neon/: CMakeLists.txt  blueprint.hpp  camera.hpp  image.cpp  image.hpp  integrator.cpp  integrator.hpp  intersection.hpp  material.cpp  material.hpp  ray.hpp  rendable.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  utils.cpp  utils.hpp
pa4-jgs03177/src/neon-sandbox/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
